--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 </head>
 <body>
     
+    <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">Nome</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+        </div>
+        <div class="form-group">
+          <label for="formGroupExampleInput2">Cognome</label>
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
+        </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Colore preferito</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+           </form>
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
